# trelis-gitingest-mcp

./: README.md  pyproject.toml
src/gitingest_mcp/: server.py
