[project]
name = "gitingest-mcp"
version = "0.1.0"
description = "An MCP server for gitingest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.3",
    "gitingest>=0.1.0",
]
[[project.authors]]
name = "“RonanMcGovern”"
email = "78278410+RonanKMcGovern@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
gitingest-mcp = "gitingest_mcp:main"
